--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <Head>
   <title>My Very First Website</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </Head>
 
 <body>
