--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <Head>
   <title>My Very First Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="./style.css" rel="stylesheet" type="text/css">
 </Head>
 
 <body>
